--- a/website/frontend/package.json
+++ b/website/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "deadtrap-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepagekey" : "https://chr0m0s0m3s.github.io/DeadTrapv2/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeployscript" : "yarn build",
+    "deployscript" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
