--- a/website/frontend/package.json
+++ b/website/frontend/package.json
@@ -21,8 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeployscript" : "npm build",
-    "deployscript" : "gh-pages -d build"
+    "predeploy" : "npm build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
