--- a/website/backend/requirements.txt
+++ b/website/backend/requirements.txt
@@ -1,4 +1,102 @@
-google
-flask
-bs4
-requests
+aniso8601==8.0.0
+anyapi==1.1.401
+appdirs==1.4.4
+asgiref==3.2.10
+attrs==20.2.0
+Automat==20.2.0
+bcrypt==3.2.0
+beautifulsoup4==4.9.1
+bs4==0.0.1
+capstone==4.0.2
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+configparser==5.0.0
+constantly==15.1.0
+cryptography==3.1
+cssselect==1.1.0
+distlib==0.3.1
+docutils==0.16
+filelock==3.0.12
+Flask==1.1.2
+Flask-Cors==3.0.9
+Flask-RESTful==0.3.8
+google==3.0.0
+GoogleToken==0.7.6
+gunicorn==20.0.4
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+html5lib==1.1
+httpcore==0.10.2
+httpx==0.14.3
+hyperframe==5.2.0
+hyperlink==20.0.1
+idna==2.10
+incremental==17.5.0
+install==1.3.3
+intervaltree==3.1.0
+itemadapter==0.1.0
+itemloaders==1.0.3
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jmespath==0.10.0
+joblib==0.16.0
+lxml==4.5.2
+Mako==1.1.3
+MarkupSafe==1.1.1
+mechanize==0.4.5
+numpy==1.19.2
+packaging==20.4
+pandas==1.1.2
+paramiko==2.7.2
+parsel==1.6.0
+phonenumbers==8.12.9
+Pillow==7.2.0
+Protego==0.1.16
+psutil==5.7.2
+pwn==1.0
+pwntools==4.2.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pycryptodomex==3.9.8
+PyDispatcher==2.0.5
+pyelftools==0.26
+pyfiglet==0.8.post1
+Pygments==2.7.1
+PyHamcrest==2.0.2
+PyNaCl==1.4.0
+pyOpenSSL==19.1.0
+pyotp==2.4.0
+pyparsing==2.4.7
+pyserial==3.4
+PySocks==1.7.1
+python-dateutil==2.8.1
+pytz==2020.1
+queuelib==1.5.0
+requests==2.24.0
+rfc3986==1.4.0
+ROPGadget==6.3
+scikit-learn==0.23.2
+scipy==1.5.2
+selenium==3.141.0
+service-identity==18.1.0
+six==1.15.0
+sklearn==0.0
+sniffio==1.1.0
+sortedcontainers==2.2.2
+soupsieve==2.0.1
+sqlparse==0.3.1
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tqdm==4.49.0
+unicorn==1.0.2rc3
+urllib3==1.25.10
+virtualenv==20.0.31
+w3lib==1.22.0
+webencodings==0.5.1
+Werkzeug==1.0.1
+zope.interface==5.1.0
